feat: 添加hutool工具库与唯一Id生成器

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <!-- snowflake -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.22</version>
+        </dependency>
+
     </dependencies>
 
     <build>
