--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,9 @@ jasypt:
     property:
       prefix: ENC(
       suffix: )
+
+logging:
+  level:
+    org:
+      springframework:
+        security=TRACE: TRACE
