--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -82,6 +82,11 @@
             <version>1.10.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.mybatis-flex</groupId>
+            <artifactId>mybatis-flex-codegen</artifactId>
+            <version>1.10.1</version>
+        </dependency>
 
         <!-- 加密 -->
         <dependency>
@@ -101,7 +106,6 @@
             <artifactId>netty-common</artifactId>
             <version>4.1.115.Final</version>
         </dependency>
-
 
         <!-- 工具 -->
         <dependency>
