feat: 集成 Swagger-ui

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,13 @@
             <version>4.1.115.Final</version>
         </dependency>
 
+        <!-- SpringDoc OpenAPI UI for Swagger -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
         <!-- 工具 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -137,6 +144,13 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>2.3.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -155,5 +169,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
