--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,9 @@ spring:
       port: 6379
       password: ENC(3wrG4+mPar/lM05X24NoB+FVBVwC9t5wabC1Qdj/FZg=)
       timeout: 10000
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
 
 # mybatis mapper xml
 mybatis-flex:
