--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.32</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.3.3</version>
+        </dependency>
         <!-- snowflake -->
         <dependency>
             <groupId>cn.hutool</groupId>
